Solved section spacing issue by changing portfilio section's height o 'auto' and then adjusting padding for different screen sizes

--- a/layout/_portfolio.scss
+++ b/layout/_portfolio.scss
@@ -1,12 +1,12 @@
 .overlay--header {
   width: 100%;
-  height: 200%;
+  height: 180%;
   position: absolute;
   left: 0;
   right: 0;
   background: linear-gradient(
     rgba(1, 1, 1, 0),
-    rgba(1, 1, 1, 0) 40%,
+    rgba(0, 0, 0, 0) 40%,
     rgba(0, 0, 0, 0.1) 50%,
     rgba(0, 0, 0, 0.25) 80%,
     rgba(1, 1, 1, 0) 90%
@@ -15,7 +15,7 @@
 }
 
 .portfolio {
-  min-height: 100vh;
+  height: auto;
   background: linear-gradient(#d9d9d9, #7c8180 50%, #6e6e6e 90%);
 
   &__scroll-container {
@@ -66,7 +66,7 @@
     align-items: center;
   }
 
-  &__arrow--x {
+  &__arrow {
     max-width: 20px;
     height: auto;
   }
@@ -105,6 +105,7 @@
 @media screen and (min-width: 576px) {
   .portfolio__scroll-container {
     width: 60vw;
+    padding-bottom: 50px;
   }
 
   .portfolio__grid-container {
@@ -121,7 +122,7 @@
     padding: 0 15px;
   }
 
-  .portfolio__arrow--x {
+  .portfolio__arrow {
     max-width: 30px;
     height: auto;
   }
@@ -167,3 +168,10 @@
     align-items: center;
   }
 }
+
+/*width: 90vw;
+overflow-x: scroll;
+margin: 0 auto;
+padding-bottom: 100px;
+-ms-overflow-style: none;
+scrollbar-width: none;*/
