--- a/layout/_svg.scss
+++ b/layout/_svg.scss
@@ -31,9 +31,9 @@
   }
 
   &--bottom {
-    width: 130vw;
+    width: 150vw;
     height: 80vh;
-    border-radius: 15% 70%;
+    border-radius: 15% 50%;
     filter: url(#cloud__filter--bottom);
     box-shadow: 140vw 1880px 20px 0px rgba(77, 77, 77, 0.4),
       140vw 1900px 20px 20px rgba(81, 80, 87, 0.4);
