--- a/main.css
+++ b/main.css
@@ -203,17 +203,17 @@
 
 .overlay--header {
   width: 100%;
-  height: 200%;
+  height: 180%;
   position: absolute;
   left: 0;
   right: 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(1, 1, 1, 0)), color-stop(40%, rgba(1, 1, 1, 0)), color-stop(50%, rgba(0, 0, 0, 0.1)), color-stop(80%, rgba(0, 0, 0, 0.25)), color-stop(90%, rgba(1, 1, 1, 0)));
-  background: linear-gradient(rgba(1, 1, 1, 0), rgba(1, 1, 1, 0) 40%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.25) 80%, rgba(1, 1, 1, 0) 90%);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(1, 1, 1, 0)), color-stop(40%, rgba(0, 0, 0, 0)), color-stop(50%, rgba(0, 0, 0, 0.1)), color-stop(80%, rgba(0, 0, 0, 0.25)), color-stop(90%, rgba(1, 1, 1, 0)));
+  background: linear-gradient(rgba(1, 1, 1, 0), rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0.1) 50%, rgba(0, 0, 0, 0.25) 80%, rgba(1, 1, 1, 0) 90%);
   z-index: auto;
 }
 
 .portfolio {
-  min-height: 100vh;
+  height: auto;
   background: -webkit-gradient(linear, left top, left bottom, from(#d9d9d9), color-stop(50%, #7c8180), color-stop(90%, #6e6e6e));
   background: linear-gradient(#d9d9d9, #7c8180 50%, #6e6e6e 90%);
 }
@@ -284,7 +284,7 @@
           align-items: center;
 }
 
-.portfolio__arrow--x {
+.portfolio__arrow {
   max-width: 20px;
   height: auto;
 }
@@ -334,6 +334,7 @@
 @media screen and (min-width: 576px) {
   .portfolio__scroll-container {
     width: 60vw;
+    padding-bottom: 50px;
   }
   .portfolio__grid-container {
     width: 300vw;
@@ -346,7 +347,7 @@
   .portfolio__title-container {
     padding: 0 15px;
   }
-  .portfolio__arrow--x {
+  .portfolio__arrow {
     max-width: 30px;
     height: auto;
   }
@@ -395,6 +396,12 @@
   }
 }
 
+/*width: 90vw;
+overflow-x: scroll;
+margin: 0 auto;
+padding-bottom: 100px;
+-ms-overflow-style: none;
+scrollbar-width: none;*/
 .skills {
   min-height: 30vh;
   background-color: #6e6e6e;
@@ -732,9 +739,9 @@ a:active {
 }
 
 .cloud--bottom {
-  width: 130vw;
+  width: 150vw;
   height: 80vh;
-  border-radius: 15% 70%;
+  border-radius: 15% 50%;
   -webkit-filter: url(#cloud__filter--bottom);
           filter: url(#cloud__filter--bottom);
   -webkit-box-shadow: 140vw 1880px 20px 0px rgba(77, 77, 77, 0.4), 140vw 1900px 20px 20px rgba(81, 80, 87, 0.4);
